
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* RMCMD ;
 int exit (int) ;
 char* ourdir ;
 int sprintf (char*,char*,char*,char*) ;
 int system (char*) ;

void giveup(int i) {
 char buf[256];
 sprintf(buf, "%s -rf %s > /dev/null 2> /dev/null",
         RMCMD, ourdir);
 system(buf);


 if (i >= 0) exit(i);
}
